## About

## Changes:
	- Updated README.md
	- Added Pydantic schemas and corelated tests (not mentioned in release before)