@@ -1,5 +1,4 @@
 from .category import validate_name_if_custom
 from .transaction import validate_receiver
 
-
 __all__ = ["validate_receiver", "validate_name_if_custom"]
