@@ -3,3 +3,5 @@
 ## Changes:
 	- Updated README.md
 	- Added Pydantic schemas and corelated tests (not mentioned in release before)
+	- Refactored code with flake8 and black to meet standards
+	- Prepared engine to work with FastAPI
